--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
     "@babel/core": "^7.0.0",
+    "@types/react": "~16.9.0",
+    "@types/react-native": "kristerkari/react-native-types-for-css-modules#v0.60.23",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "babel-preset-expo": "~8.0.0",
+    "less": "^3.11.1",
+    "react-native-less-transformer": "^1.3.0",
     "typescript": "~3.6.3"
   },
   "private": true
