--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "babel-preset-expo": "~8.0.0",
     "less": "^3.11.1",
+    "node-sass": "^4.13.1",
+    "react-native-css-transformer": "^1.2.4",
     "react-native-less-transformer": "^1.3.0",
+    "react-native-sass-transformer": "^1.4.0",
     "typescript": "~3.6.3"
   },
   "private": true
