--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.0.0",
     "@types/react": "~16.9.0",
     "@types/react-native": "kristerkari/react-native-types-for-css-modules#v0.60.23",
+    "babel-plugin-react-native-classname-to-dynamic-style": "^0.22.0",
     "babel-plugin-react-native-classname-to-style": "^1.2.2",
     "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "babel-preset-expo": "~8.0.0",
