--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start -c --android",
-    "ios": "expo start -c --ios",
-    "web": "expo start -c --web",
+    "android": "expo start -c --no-dev --android",
+    "ios": "expo start -c --no-dev --ios",
+    "web": "expo start:web",
     "build:web": "expo build:web",
     "build:android": "expo build:android",
     "build:ios": "expo build:ios",
